[package]
name = "cnetai-wasm-signer"
version = "0.1.0"
edition = "2021"
authors = ["Wārudo Surī <dev@cnetai.com>"]
description = "WASM-based signing library for the CNetAI PWA."

[lib]
crate-type = ["cdylib"]
path = "src/simple_lib.rs"

[dependencies]
# Wasm Dependencies
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"